# MIP_in_NMPC

./: CMakeLists.txt  README.md  config_param.sh  exe_batch_N15_track1.sh  exe_batch_N15_track2.sh  exe_batch_N30_track1.sh  exe_batch_N30_track2.sh  main.cpp  select_mode.sh
acado_code_generation/: CMakeLists.txt
acado_code_generation/src/: formulation.cpp
include/: LV_traj.h  MIP.h  aux_func.h  plot.h  shadow_vehicle.h  step_param.h  system_config.h  track.h  types.h
param/: track1.json
qp_solver_interface/: gurobi_interface.cpp  gurobi_interface.hpp  solver_selector.cpp  solver_selector.hpp
src/: MIP.cpp  aux_func.cpp  plot.cpp  shadow_vehicle.cpp  track.cpp
